code/human_written_tests/WebAssembly/processed_control_flow_validation/test_block_61.wast
(assert_invalid
  (module (func $type-value-unreached-select-f64-f32 (result f64)
    (block (result f32) (select (unreachable) (unreachable) (unreachable)))
  ))
  "type mismatch"
)